--- a/src/pages/signin-page/SignInPage.css
+++ b/src/pages/signin-page/SignInPage.css
@@ -9,9 +9,6 @@
   margin-top: 10rem;
 }
 
-form {
-  margin: 100px;
-}
 .Signin__input-field {
   position: relative;
   margin: 1rem auto;
